<fix>(styles): removed horizontal scrolling for MenuState.css

--- a/styles/MenuState.css
+++ b/styles/MenuState.css
@@ -4,6 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
